--- a/RLSinC#/Remote_EE_Lab/Remote_EE_Lab/Remote_EE_Lab.csproj
+++ b/RLSinC#/Remote_EE_Lab/Remote_EE_Lab/Remote_EE_Lab.csproj
@@ -83,6 +83,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Z80BubbleSort_2C1.hex" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
